--- a/env/grafana/Dockerfile
+++ b/env/grafana/Dockerfile
@@ -1,4 +1,4 @@
 FROM grafana/grafana:4.6.2
 
 ENV GF_PATHS_PLUGINS /var/lib/grafana-plugins
-ADD dist ${GF_PATHS_PLUGINS}/playneta-clickhouse-grafana
+ADD . ${GF_PATHS_PLUGINS}/playneta-clickhouse-grafana
