--- a/project.yml
+++ b/project.yml
@@ -4,6 +4,6 @@ project:
     base: playneta/statistics
     images:
       grafana:
-        checksum: 4e6b12fc1b5fe395978ba7739947c50d
-        context: app/
-        version: 0.1.16
+        checksum: 0b64f00a1fd5d0149d4aa37a64060141
+        context: app/dist
+        version: 0.1.17
