--- a/project.yml
+++ b/project.yml
@@ -1,9 +1,9 @@
 project:
 
   docker:
-    base: playneta/statistics
+    base: playneta/grafana
     images:
-      grafana:
-        checksum: 0147da4dc8c3fc7c4c2169d62d1a4b4d
+      main:
+        checksum: 1f9de26ff6d72db165ee8f5712f90a6e
         context: app/dist
-        version: 0.1.31
+        version: 0.1.3
