--- a/app/package.json
+++ b/app/package.json
@@ -1,9 +1,9 @@
 {
-
     "name": "playneta-clickhouse",
     "version": "1.8.1",
     "description": "ClickHouse datasource for Grafana",
     "scripts": {
+        "build": "grunt",
         "build:prod": "webpack --config webpack.config.prod.js",
         "build:dev": "webpack --mode development",
         "build:watch": "webpack --mode development --watch",
@@ -20,6 +20,19 @@
         "systemjs": "^2.1.1"
     },
     "devDependencies": {
+        "babel": "^6.23.0",
+        "grunt-babel": "~6.0.0",
+        "grunt-systemjs-builder": "^1.0.0",
+        "@types/lodash": "^4.14.83",
+        "load-grunt-tasks": "3.5.2",
+        "grunt": "^1.0.1",
+        "grunt-contrib-clean": "^1.1.0",
+        "grunt-contrib-copy": "^1.0.0",
+        "grunt-contrib-watch": "^1.0.0",
+        "grunt-typescript": "^0.8.0",
+        "babel-plugin-transform-es2015-for-of": "^6.6.0",
+        "babel-plugin-transform-es2015-modules-systemjs": "^6.24.1",
+        "babel-preset-es2015": "^6.24.1",
         "@babel/core": "^7.3.3",
         "@babel/preset-env": "^7.3.1",
         "@babel/preset-typescript": "^7.1.0",
